Dev Org/src/objects/Form_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Check_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <label>Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Form_Answers</relationshipLabel>
        <relationshipName>Form_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Numeric__c</fullName>
        <label>Numeric</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Page_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page-Section</label>
        <referenceTo>Page_Section__c</referenceTo>
        <relationshipLabel>Form_Answers</relationshipLabel>
        <relationshipName>Form_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Number__c</fullName>
        <label>Question Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Section_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Section-Question</label>
        <referenceTo>Section_Question__c</referenceTo>
        <relationshipLabel>Form_Answers</relationshipLabel>
        <relationshipName>Form_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template-Page</label>
        <referenceTo>Template_Page__c</referenceTo>
        <relationshipLabel>Form_Answers</relationshipLabel>
        <relationshipName>Form_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Text_Area__c</fullName>
        <label>Text Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi Check Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Check Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Form_Answer</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Form_Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form_Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>